# api/v1alpha1/types.gen.go
@@ -140,19 +140,22 @@ type Source struct {
 
 // SourceCreate defines model for SourceCreate.
 type SourceCreate struct {
-	CertificateChain *string     `json:"certificateChain,omitempty" validate:"omitnil,certs"`
-	Name             string      `json:"name" validate:"required,source_name,min=1,max=100"`
-	Proxy            *AgentProxy `json:"proxy,omitempty"`
-	SshPublicKey     *string     `json:"sshPublicKey,omitempty" validate:"omitnil,ssh_key"`
+	CertificateChain *ValidatedCertificateChain `json:"certificateChain,omitempty" validate:"omitnil,certs"`
+	Name             ValidatedSourceName        `json:"name" validate:"required,source_name,min=1,max=100"`
+	Proxy            *AgentProxy                `json:"proxy,omitempty"`
+	SshPublicKey     *ValidatedSSHPublicKey     `json:"sshPublicKey,omitempty" validate:"omitnil,ssh_key"`
 }
 
 // SourceList defines model for SourceList.
 type SourceList = []Source
 
-// SourceUpdateOnPrem defines model for SourceUpdateOnPrem.
-type SourceUpdateOnPrem struct {
-	AgentId   openapi_types.UUID `json:"agentId"`
-	Inventory Inventory          `json:"inventory"`
+// SourceUpdate defines model for SourceUpdate.
+type SourceUpdate struct {
+	CertificateChain *ValidatedCertificateChain   `json:"certificateChain,omitempty" validate:"omitnil,certs"`
+	Labels           *[]Label                     `json:"labels,omitempty" validate:"omitempty,dive,required"`
+	Name             *ValidatedOptionalSourceName `json:"name,omitempty" validate:"omitempty,source_name,min=1,max=100"`
+	Proxy            *AgentProxy                  `json:"proxy,omitempty"`
+	SshPublicKey     *ValidatedSSHPublicKey       `json:"sshPublicKey,omitempty" validate:"omitnil,ssh_key"`
 }
 
 // Status Status is a return value for calls that don't return other objects.
@@ -165,6 +168,12 @@ type Status struct {
 
 	// Status Status of the operation. One of: "Success" or "Failure". More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#spec-and-status
 	Status *string `json:"status,omitempty"`
+}
+
+// UpdateInventory defines model for UpdateInventory.
+type UpdateInventory struct {
+	AgentId   openapi_types.UUID `json:"agentId"`
+	Inventory Inventory          `json:"inventory"`
 }
 
 // VCenter defines model for VCenter.
@@ -196,6 +205,18 @@ type VMs struct {
 	TotalMigratableWithWarnings *int                `json:"totalMigratableWithWarnings,omitempty"`
 }
 
+// ValidatedCertificateChain defines model for ValidatedCertificateChain.
+type ValidatedCertificateChain = string
+
+// ValidatedOptionalSourceName defines model for ValidatedOptionalSourceName.
+type ValidatedOptionalSourceName = string
+
+// ValidatedSSHPublicKey defines model for ValidatedSSHPublicKey.
+type ValidatedSSHPublicKey = string
+
+// ValidatedSourceName defines model for ValidatedSourceName.
+type ValidatedSourceName = string
+
 // PresignedUrl defines model for presigned-url.
 type PresignedUrl struct {
 	// ExpiresAt Expiration time for the URL token.
@@ -221,7 +242,10 @@ type UploadRvtoolsFileMultipartBody struct {
 type CreateSourceJSONRequestBody = SourceCreate
 
 // UpdateSourceJSONRequestBody defines body for UpdateSource for application/json ContentType.
-type UpdateSourceJSONRequestBody = SourceUpdateOnPrem
+type UpdateSourceJSONRequestBody = SourceUpdate
+
+// UpdateInventoryJSONRequestBody defines body for UpdateInventory for application/json ContentType.
+type UpdateInventoryJSONRequestBody = UpdateInventory
 
 // UploadRvtoolsFileMultipartRequestBody defines body for UploadRvtoolsFile for multipart/form-data ContentType.
 type UploadRvtoolsFileMultipartRequestBody UploadRvtoolsFileMultipartBody
